# pranavsutar

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/: theme.css
components/: about.py  achievements.py  contact.py  experiment_card.py  hero.py  project_card.py  resume.py  skills.py  snapshot.py  timeline.py
config/: achievements.yaml  experience.yaml  profile.yaml  projects.yaml  socials.yaml  theme.yaml
execute-guide/: README.md  todo.md
utils/: config.py  helpers.py
views/: achievements_page.py  contact_page.py  experience.py  experiments.py  home.py  projects.py  resume_page.py  skills_page.py
