[project]
name = "portfolio"
version = "1.0.0"
description = "Personal portfolio website built with Streamlit"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.45.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []
